--- a/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/build.gradle
+++ b/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/build.gradle
@@ -44,10 +44,14 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
-    implementation 'com.google.android.gms:play-services-auth:20.0.1'
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
