--- a/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/AndroidManifest.xml
+++ b/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.proyectofinalevaluacin_paulaplazaguirado">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +15,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoFinalEvaluación_PaulaPlazaGuirado">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/key_api_google"/>
+        <activity
+            android:name=".View.PaquetesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.CompraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.MapaActivity"
+            android:exported="false" />
         <activity
             android:name=".View.InicioActivity"
             android:exported="false" />
