--- a/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/build.gradle
+++ b/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-android'
     id 'com.google.gms.google-services'
     id 'kotlin-kapt'
 }
@@ -35,12 +34,9 @@ android {
     }
 
     buildFeatures{
-        viewBinding = true
+        viewBinding  true
     }
 
-    dataBinding {
-        enabled = true
-    }
 }
 
 dependencies {
@@ -60,6 +56,10 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
     implementation "androidx.room:room-runtime:2.4.2"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.3'
     kapt "androidx.room:room-compiler:2.4.2"
 
     implementation "androidx.room:room-ktx:2.4.2"
@@ -68,10 +68,15 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.4.1"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10"
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
